# RG

./: .gitignore  Makefile  README.md  RG.org  RG.wl  TestRG.nb  TestRG.wlt  run_test.wl  run_test_by_number.wl  test.wl
BaseUtils/: BaseUtils.wl  ExampleBaseUtils.nb  Makefile  TestBaseUtils.nb  TestBaseUtils.wlt
Calculation/: Calculation.wl  Makefile  TestCalculation.nb  TestCalculation.wlt
Calculation/tests/: factorIt_test.wlt  pullIt_test.wlt
CommonNotation/: CommonNotation.wl
Diagrams/: Diagrams.wl
DrawGraph/: DrawGraph.wl
ExtractEquations/: ExtractEquations.wl
FeynmanDiagrams/: FeynmanDiagrams.wl  TestFeynmanDiagrams.nb  TestFeynmanDiagrams.wlt
FeynmanParameters/: FeynmanParameters.wl
GiNaC/: CMakeLists.txt  G.cpp  G.tm  GiNaC.wl  Makefile  TestGiNaC.wl  test.sh  test.wl
GiNaC/cmake/: FindCLN.cmake  FindGiNaC.cmake  FindUUID.cmake  WL.cmake
GiNaC/tests/: link.sh  test.wl
Groups/: Groups.wl
HelicityStates/: HelicityStates.wl  Makefile  TestHelicityStates.wlt
IOUtils/: IOUtils.wl  SetDrawOptions.wl
Integrate/: Integrate.wl  TestIntegrate.wl
Integrate/tests/: TestIntegrate.wl
Kinematics/: ConservationRules.wl  ExampleKinematics.nb  FourVector.wl  Kinematics.wl  LorentzIndex.wl  Makefile  MetricTensor.wl  PhysicalRegion.wl  ScalarInvariants.wl  ScalarProduct.wl  ScalarProductRules.wl  TestKinematics.nb  TestKinematics.wlt  Tests.wl  init.wl
Kinematics/tests/: TestConservationRules.wl  TestFourVector.wl  TestKinematics.wl  TestLorentzIndex.wl  TestMetricTensor.wl  TestPhysicalRegion.wl  TestScalarInvariants.wl  TestScalarProduct.wl  TestScalarProductRules.wl
LoopGraph/: LoopGraph.wl  LoopToolsGraph.wl
LoopGraph/tests/: TestLoopGraphs.wl  TestLoopToolsGraph.wl
Loops/: Loops.wl
Lorentz/: DiracMatrix.wl  FourVector.wl  LorentzIndex.wl  LorentzTensor.wl  MetricTensor.wl  PartialDerivative.wl  ScalarProduct.wl  init.wl
Lorentz/tests/: TestDiracMatrix.wl  TestLorentz.wl  TestLorentzIndex.wl  TestMetricTensor.wl  TestScalarProduct.wl
Miscellaneous/: Miscellaneous.wl
Notation/: At.wl  D.wl  ExampleNotation.nb  Force.wl  Integrate.wl  Limit.wl  Makefile  NonCommutativeMultiply.wl  Notation.wl  Product.wl  Sum.wl  TestNotation.nb  TestNotation.wlt  i0.wl
Notation/tests/: TestIntegrate.wl  TestNotation.wl
Notebooks/: Notebooks.wl
PDG/: PDG.wl
Parametrization/: Parametrization.wl  Rules.wl
Particles/: Particles.wl  TestParticles.wlt
PhysicalRegion/: PhysicalRegion.wl
PhysicalRegion/tests/: TestPhysicalRegion.wl
Presentation/: ExamplePresentation.nb  Makefile  Presentation.wl  TestPresentation.wlt
Scripts/: Scripts.wl
Series/: Series.wl
SyntaxChecker/: RunCheck.wl  SyntaxChecker.wl  test.wl
SyntaxChecker/tests/: TestSyntaxChecker.wl
Tests/: 001.wl  002.wl  003.wl  run.sh
Tools/: ExtractCode.wl  OldTools.wl  Rules.wl  RunScript.wl  RunTest.wl  Scripts.wl  SetDrawOptions.wl  TestArgParse.wl  Tools.wl
Tools/tests/: TestRules.wl  TestRules.wlt  (+2 more)
Traces/: Makefile  TestTraces.wlt  Traces.wl
Unused/: run_test.wl
WSTP/: Makefile  TestLinks.wl
projects/: Makefile  project.org
(+74 files in other folders)
